--- a/style.css
+++ b/style.css
@@ -1,15 +1,37 @@
 body{
     min-height: 100vh;
     background-color: rgb(16, 27, 27);
+    margin: 0px;
 }
 .game-box{
-    border: 5px groove rgb(0, 247, 255);
-    width: auto;
     height: 100vh;
 }
+.title{
+    display: flex;
+    justify-content: center;
+    color: black;
+    background-color: yellow;
+    font-family: Arial, Helvetica, sans-serif;
+}
+#start-button{
+    width: 250px;
+    height: 50px;
+    font-size: 30px;
+    font-family: fantasy, 'Times New Roman', Times, serif;  
+    background-image: linear-gradient(red, blue); 
+    color: yellow;
+    position: relative;
+    top: 150px;
+}
+#start-button:hover{
+    background-image: linear-gradient(cyan, yellow);
+    color: blue;
+    cursor: pointer;
+}
 .game-board{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3,fr);
-    border: 1px solid wheat;
+    display: flex;
+    justify-content: center;
+    background-color: black;
+    height: 100%;
+    width: 100%;
 }
