--- a/style.css
+++ b/style.css
@@ -37,11 +37,9 @@ body{
     height: 100%;
     width: 100%;
 }
-#gridBar{
+.bars{
     display: grid;
-    grid-template-columns: repeat(3,minmax(150px,1fr));
-    grid-template-rows: repeat(3, minmax(150px,1fr));
-    border: 2px solid yellow;
-    box-sizing: border-box;
-    height: 500px;
+    border: 2px solid cyan;
+    height: 50px;
+    width: 50px;
 }
