--- a/style.css
+++ b/style.css
@@ -15,19 +15,6 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     height: 50px;
 }
-#player1,#player2{
-    height: 20px;
-    width: 250px;
-}
-.input-div{
-    display: flex;
-    justify-content: center;
-    position: relative;
-    top: 75px;
-    height: fit-content;
-    color: yellow;
-    width: max-content;
-}
 #start-button{
     width: 250px;
     height: 50px;
@@ -46,15 +33,37 @@ body{
 .game-board{
     display: flex;
     background-color: black;
+    flex-wrap: wrap;
+    justify-content: center;
     height: 100%;
     width: 100%;
+}
+.input-cont{
+    display: flex;
+    flex-direction: column;
+}
+label{
+    color: yellow;
+    height: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+#player1,#player2
+{
+    height: 15px;
+    width: 100%;
+    margin-top: 2px;
+    margin-bottom: 20px;
+}
+.choose-player{
+    position: relative;
+    top: 75px;
 }
 #grid-cont{
     display: grid;
     position: relative;
     top: 50px;
-    grid-template-columns: repeat(3, 150px);
-    grid-template-rows: repeat(3, 150px);
+    grid-template-columns: repeat(3, 140px);
+    grid-template-rows: repeat(3, 140px);
     gap: 2px;
     background-color: yellow;
     height: fit-content;
