--- a/style.css
+++ b/style.css
@@ -69,5 +69,12 @@ label{
     height: fit-content;
 }
 .grid-elm{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: black;
+    color: cyan;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 50px;
+    font-weight: bold;
 }
