--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     height: 50px;
 }
-#start-button{
+#start-button:enabled{
     width: 250px;
     height: 50px;
     font-size: 30px;
@@ -25,10 +25,24 @@ body{
     position: relative;
     top: 150px;
 }
-#start-button:hover{
+#start-button:hover:enabled{
     background-image: linear-gradient(cyan, yellow);
     color: blue;
     cursor: pointer;
+}
+#start-button:disabled{
+    width: 250px;
+    height: 50px;
+    font-size: 30px;
+    font-family: fantasy, 'Times New Roman', Times, serif; 
+    background-image: gray;
+    color: black;
+    cursor: not-allowed;
+    position: relative;
+    top: 150px;
+}
+.playerNames{
+    justify-content: center;
 }
 .game-board{
     display: flex;
@@ -41,6 +55,7 @@ body{
 .input-cont{
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 label{
     color: yellow;
@@ -57,11 +72,12 @@ label{
 .choose-player{
     position: relative;
     top: 75px;
+    width: 80%;
 }
 #grid-cont{
     display: grid;
     position: relative;
-    top: 50px;
+    top: 120px;
     grid-template-columns: repeat(3, 140px);
     grid-template-rows: repeat(3, 140px);
     gap: 2px;
