--- a/style.css
+++ b/style.css
@@ -94,3 +94,12 @@ label{
     font-size: 50px;
     font-weight: bold;
 }
+#round{
+    display: flex;
+    flex-direction: column;
+    color: cyan;
+    position: absolute;
+    top: 80px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+}
