--- a/style.css
+++ b/style.css
@@ -103,3 +103,61 @@ label{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
 }
+#next{
+    display: flex;
+    position: absolute;
+    top: 110px;
+    color: plum;
+    font-size: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+#nxtButton{
+    width: 250px;
+    height: 50px;
+    font-size: 30px;
+    font-family: fantasy, 'Times New Roman', Times, serif;  
+    background-image: linear-gradient(red, blue); 
+    color: yellow;
+    position: absolute;
+    top: 650px;
+}
+#resetButton{
+    width: 250px;
+    height: 50px;
+    font-size: 30px;
+    font-family: fantasy, 'Times New Roman', Times, serif;  
+    background-image: linear-gradient(red, blue); 
+    color: yellow;
+    position: absolute;
+    top: 750px;
+}
+#nxtButton:hover:enabled{
+    background-image: linear-gradient(cyan, yellow);
+    color: blue;
+    cursor: pointer;
+}
+#resetButton:hover:enabled{
+    background-image: linear-gradient(cyan, yellow);
+    color: blue;
+    cursor: pointer;
+}
+#restart{
+    position: absolute;
+    width: 150px;
+    height: 30px;
+    font-size: 20px;
+    top: 650px;
+    font-family: fantasy, 'Times New Roman', Times, serif;
+    background-color: red;
+    color: lightblue;
+}
+#cover{
+    display: grid;
+    position: absolute;
+    top: 120px;
+    grid-template-columns: repeat(3, 140px);
+    grid-template-rows: repeat(3, 140px);
+    gap: 2px;
+    background-color: transparent;
+    height: fit-content;
+}
